--- a/project_EventManagement/client/views/user/login.view.html
+++ b/project_EventManagement/client/views/user/login.view.html
@@ -11,7 +11,7 @@
                             <label for="inputEmail3" class="col-sm-3 control-label">Email</label>
                             <div class="col-sm-9">
                                 <input type="email" class="form-control" id="inputEmail3" placeholder="Email"
-                                       ng-model = "user.email" required="">
+                                       ng-model = "user.username" required="">
                             </div>
                         </div>
                         <div class="form-group">
