--- a/project_EventManagement/client/views/event/myFavouriteEvents.view.html
+++ b/project_EventManagement/client/views/event/myFavouriteEvents.view.html
@@ -1,23 +1,21 @@
-<div class="container" ng-Controller="FavouriteEventController">
+<section class="container" ng-Controller="FavouriteEventController" ng-init ="init()">
     <div class="row">
-        <div ng-show = 'noResults' class='col-md-6'>
+        <section ng-show = 'noResults' class='col-md-6'>
             <p style="padding: 30px; font-size: x-large;"><i class="fa fa-exclamation-triangle"></i> Sorry, no events found.</p>
-        </div>
-        <div ng-show = '!noResults' class="col-md-6">
+        </section>
+
+        <section ng-show = '!noResults' class="col-md-6">
             <div class="row">
                 <div class="col-md-12">
-                    <label for="search">Search:</label> <input ng-model="q" id="search"
-                                                               class="form-control" placeholder="Filter text">
+                    <label for="search">Search:</label> <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
                 </div>
             </div>
             <br>
-            <span us-spinner="{radius:30, width:8, length: 16, color:'#428bca'}" spinner-on="showSpinner"></span>
             <div style="overflow:auto; height:590px;">
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat ="record in basicSearchRecords | filter:q">
-                            <div class="row">
-                                <a href="#/eventDetail/{{record.id}}">
-
+                        <div class="row">
+                            <a href="#/eventDetail/{{record.id}}">
                                 <div class="col-md-4">
                                     <img style="width: 70%; margin-left: 30px; margin-top: 10px;"
                                          alt="{{record.name.text}}" ng-src={{record.logo.url}} check-image>
@@ -33,25 +31,20 @@
                                     <p>Capacity:&nbsp;{{record.capacity}}</p>
                                 </div>
 
-                                </a>
-                                <a href= "" ng-click="createMarker(record)">
-                                    <p align="right"><i class="fa fa-map-marker"></i>&nbsp;Map&nbsp;</p>
-                                </a>
-                            </div></li>
+                            </a>
+                            <a href= "" ng-click="createMarker(record)">
+                                <p align="right"><i class="fa fa-map-marker"></i>&nbsp;Show on Map&nbsp;</p>
+                            </a>
+                        </div>
+                    </li>
                 </ul>
             </div>
+        </section>
 
-
-            <div class="text-center">
-                <dir-pagination-controls boundary-links="true"
-                                         on-page-change="pageChangeHandler(newPageNumber)"
-                                         template-url="pages/dirPagination.tpl.html"></dir-pagination-controls>
-            </div>
-        </div>
-        <div class="col-md-6" style="padding-top: 25px;">
+        <section class="col-md-6" style="padding-top: 25px;">
             <div id ="eEvent" class="map-view">
-
             </div>
-        </div>
+        </section>
+
     </div>
-</div>
+</section>
