--- a/project_EventManagement/client/views/event/uploadEvent.view.html
+++ b/project_EventManagement/client/views/event/uploadEvent.view.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="UploadEventController">
+<section class="container" ng-controller="UploadEventController">
     <div class="form-group">
         <div class="row">
             <div class="col-xs-8">
@@ -75,4 +75,4 @@
         </div>
     </div>
 
-</div>
+</section>
