--- a/project_EventManagement/client/views/event/eventDetail.view.html
+++ b/project_EventManagement/client/views/event/eventDetail.view.html
@@ -1,8 +1,7 @@
-<div class="container" ng-Controller="EventController">
-    <div class="row">
+<section class="container" ng-Controller="EventController" ng-init = "init()">
+    <section class="row">
         <div class="col-md-4" style="text-align: center;">
-            <img
-                    style="width: 100%; margin-top: 10px; max-width: 250px; max-height: 250px; font-size: small; padding: 5px; border: 1px solid black;"
+            <img style="width: 100%; margin-top: 10px; max-width: 250px; max-height: 250px; font-size: small; padding: 5px; border: 1px solid black;"
                     alt="{{event.name.html}}" ng-src={{event.logo.url}} check-image>
 
             <div ng-if="currentUser" style="margin-bottom:5px;">
@@ -38,16 +37,11 @@
             </div>
         </div>
 
-    </div>
-    <div class="row" style="margin-bottom:10px;">
+    </section>
+
+    <section class="row" style="margin-bottom:10px;">
         <div class="col-md-4">
             <div id="eventMap" class="map-view">
-                <!--<map zoom="14" center="[{{currentLatitude}},{{currentLongitude}}]">
-                    <directions draggable="true" travel-mode="DRIVING"
-                                origin="current-location"
-                                destination="[{{event.latitude}},{{event.longitude}}]">
-                    </directions>
-                </map>-->
             </div>
         </div>
         <div class="col-md-8">
@@ -55,15 +49,15 @@
                 <strong>Description: </strong>{{event.description.text}}
             </p>
         </div>
-    </div>
+    </section>
 
-    <div class="row" ng-if="reviewsExist">
+    <section class="row" ng-if="reviewsExist">
         <h3 style="margin-left: 12px;">Reviews</h3>
         <table class="table table-striped table-condensed" style="background-color:white;">
             <tr ng-repeat="review in reviews">
                 <td style="padding:10px;">{{review}}</td>
             </tr>
         </table>
-    </div>
+    </section>
 
-</div>
+</section>
