--- a/project_EventManagement/client/views/event/eventList.view.html
+++ b/project_EventManagement/client/views/event/eventList.view.html
@@ -1,29 +1,24 @@
-<div class="container" ng-Controller="EventListController">
+<section class="container" ng-Controller="EventListController" ng-init="init()">
     <div class="row">
-        <div ng-show = 'noResults' class='col-md-6'>
+        <section ng-show = 'noResults' class='col-md-6'>
             <p style="padding: 30px; font-size: x-large;"><i class="fa fa-exclamation-triangle"></i> Sorry, no events found.</p>
-        </div>
-        <div ng-show = '!noResults' class="col-md-6">
+        </section>
+
+        <section ng-show = '!noResults' class="col-md-6">
             <div class="row">
                 <div class="col-md-12">
-                    <label for="search">Search:</label> <input ng-model="q" id="search"
-                                                               class="form-control" placeholder="Filter text">
+                    <label for="search">Search:</label> <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
                 </div>
             </div>
             <br>
-            <span us-spinner="{radius:30, width:8, length: 16, color:'#428bca'}" spinner-on="showSpinner"></span>
             <div style="overflow:auto; height:590px;">
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat ="record in basicSearchRecords | filter:q">
-                    <!--    dir-paginate="record in basicSearchRecords | itemsPerPage: pageSize"
-                        current-page="currentPage"-->
-
-                            <div class="row">
-                                <a href="#/eventDetail/{{record.id}}">
-
+                        <article class="row">
+                            <a href="#/eventDetail/{{record.id}}">
                                 <div class="col-md-4">
                                     <img style="width: 70%; margin-left: 30px; margin-top: 10px;"
-                                         alt="{{record.name.text}}" ng-src={{record.logo.url}} check-image>
+                                             alt="{{record.name.text}}" ng-src={{record.logo.url}} check-image>
                                 </div>
                                 <div class="col-md-8" style="padding: 10px;">
                                     <p>
@@ -35,26 +30,20 @@
                                     </p>
                                     <p>Capacity:&nbsp;{{record.capacity}}</p>
                                 </div>
+                            </a>
 
-                                </a>
-                                <a href= "" ng-click="createMarker(record)">
-                                    <p align="right"><i class="fa fa-map-marker"></i>&nbsp;Map&nbsp;</p>
-                                </a>
-                            </div></li>
+                            <a href= "" ng-click="createMarker(record)">
+                               <p align="right"><i class="fa fa-map-marker"></i>&nbsp;Show on Map&nbsp;</p>
+                            </a>
+                        </article>
+                    </li>
                 </ul>
             </div>
+        </section>
 
-
-            <div class="text-center">
-                <dir-pagination-controls boundary-links="true"
-                                         on-page-change="pageChangeHandler(newPageNumber)"
-                                         template-url="pages/dirPagination.tpl.html"></dir-pagination-controls>
-            </div>
-        </div>
-        <div class="col-md-6" style="padding-top: 25px;">
+        <section class="col-md-6" style="padding-top: 25px;">
             <div id ="eEvent" class="map-view">
-
             </div>
-        </div>
+        </section>
     </div>
-</div>
+</section>
