--- a/project_EventManagement/client/views/event/userEventHistory.view.html
+++ b/project_EventManagement/client/views/event/userEventHistory.view.html
@@ -1,9 +1,10 @@
-<div class="container" ng-Controller="UserEventHistoryController">
+<section class="container" ng-Controller="UserEventHistoryController" ng-init="init()">
     <div class="row">
-        <div ng-show = 'noResults' class='col-md-12'>
+        <section ng-show = 'noResults' class='col-md-12'>
             <p style="padding: 30px; font-size: x-large;"><i class="fa fa-exclamation-triangle"></i> Sorry, no events found.</p>
-        </div>
-        <div ng-show = '!noResults' class="col-md-12">
+        </section>
+
+        <section ng-show = '!noResults' class="col-md-12">
             <div class="row">
                 <div class="col-md-12">
                     <label for="search">Search:</label> <input ng-model="q" id="search"
@@ -11,21 +12,17 @@
                 </div>
             </div>
             <br>
-            <span us-spinner="{radius:30, width:8, length: 16, color:'#428bca'}" spinner-on="showSpinner"></span>
             <div style="overflow:auto; height:590px;">
                 <ul class="list-group">
                     <li class="list-group-item" ng-repeat ="record in history | filter:q">
-                        <!--    dir-paginate="record in basicSearchRecords | itemsPerPage: pageSize"
-                            current-page="currentPage"-->
-
                         <div class="row">
                             <a href="#/eventDetail/{{record.id}}">
 
-                                <div class="col-md-4">
+                                <article class="col-md-4">
                                     <img style="width: 70%; margin-left: 30px; margin-top: 10px;"
                                          alt="{{record.name.text}}" ng-src={{record.logo.url}} check-image>
-                                </div>
-                                <div class="col-md-8" style="padding: 10px;">
+                                </article>
+                                <article class="col-md-8" style="padding: 10px;">
                                     <p>
                                         <b>{{record.name.text}}</b>
                                     </p>
@@ -34,16 +31,14 @@
                                         date:'EEE, MMM dd yyyy, hh:mm a'}}
                                     </p>
                                     <p>Capacity:&nbsp;{{record.capacity}}</p>
-                                </div>
+                                </article>
 
                             </a>
-                            <!--<a href= "" ng-click="createMarker(record)">
-                                <p align="right"><i class="fa fa-map-marker"></i>&nbsp;Map&nbsp;</p>
-                            </a>-->
-                        </div></li>
+                        </div>
+                    </li>
                 </ul>
             </div>
+        </section>
 
-        </div>
     </div>
-</div>
+</section>
