Added Start Survey Page

--- a/clientSurvey/views/survey/qualifier.view.html
+++ b/clientSurvey/views/survey/qualifier.view.html
@@ -6,49 +6,49 @@
             </section>
             <h2 align="left">Question 1: Does you company support db?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio">Yes</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio">No</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="false">No</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 2: Does you company support db?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio">Yes</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio">No</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="false">No</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 3: Does you company support db?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio">Yes</label>
+                    <label><input type="radio" name="optradio3" ng-model="opt3" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio">No</label>
+                    <label><input type="radio" name="optradio3" ng-model="opt3" value="true">No</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 4: Does you company support db?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio">Yes</label>
+                    <label><input type="radio" name="optradio4" ng-model="opt4" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio">No</label>
+                    <label><input type="radio" name="optradio4" ng-model="opt4" value="false">No</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 5: Does you company support db?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio">Yes</label>
+                    <label><input type="radio" name="optradio5" ng-model="opt5" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio">No</label>
+                    <label><input type="radio" name="optradio5" ng-model="opt5" value="false">No</label>
                 </div>
             </h2>
-            <a class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" data-wow-delay=".3s" href="#works" data-section="#works" >View Assessment</a>
+            <button class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="OnAssessmentSubmit()" data-wow-delay=".3s" data-section="#works" >View Assessment</button>
 
         </div>
     </div>
