Calculation Logic for output

--- a/clientSurvey/views/survey/section1.view.html
+++ b/clientSurvey/views/survey/section1.view.html
@@ -6,31 +6,31 @@
             </section>
             <h2 align="left">Question 1: What is your technical team’s preferred development platform?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho, Informatica, Talend, SkyTree, Sqoop, Zookeeper, NiFi">Windows</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho,Informatica,Talend,SkyTree,Sqoop,Zookeeper,NiFi">Windows</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho, Informatica, Sqoop, Zookeeper, Flume, NiFi">Linux</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho,Informatica,Sqoop,Zookeeper,Flume,NiFi">Linux</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho, Talend, SkyTree, Sqoop, Zookeeper, Flume, NiFi">Mac OS</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho,Talend,SkyTree,Sqoop,Zookeeper,Flume,NiFi">Mac OS</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho, Talend, Sqoop, Zookeeper, Flume, NiFi">Unix</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="Pentaho,Talend,Sqoop,Zookeeper,Flume,NiFi">Unix</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 2: What is your deployment or production platform?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho, Talend, NiFi">Windows</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho,Talend,NiFi">Windows</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho, SkyTree, Sqoop, Zookeeper, Flume, NiFi">Linux</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho,SkyTree,Sqoop,Zookeeper,Flume,NiFi">Linux</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho, Talend, Sqoop, Zookeeper, Flume, NiFi">Mac OS</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho,Talend,Sqoop,Zookeeper,Flume,NiFi">Mac OS</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho, Talend, Sqoop, Zookeeper, Flume, NiFi">Unix</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho,Talend,Sqoop,Zookeeper,Flume,NiFi">Unix</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio2" ng-model="opt2" value="">Any</label>
@@ -39,7 +39,7 @@
             <br>
             <h2 align="left">Question 3: Do you want your integration tool to incorporate data analytics?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio3" ng-model="opt3" value="Pentaho, Informatica, Talend, Skytree">Yes</label>
+                    <label><input type="radio" name="optradio3" ng-model="opt3" value="Pentaho,Informatica,Talend,SkyTree">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio3" ng-model="opt3" value="">No</label>
@@ -48,16 +48,16 @@
             <br>
             <h2 align="left">Question 4: Is this for exploration or enterprise purchase?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio4" ng-model="opt4" value="Talend, Pentaho, Sqoop, Zookeeper, Flume, Nifi">Exploration - open source</label>
+                    <label><input type="radio" name="optradio4" ng-model="opt4" value="Talend,Pentaho,Sqoop,Zookeeper,Flume,NiFi">Exploration - open source</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio4" ng-model="opt4" value="Informatica, Talend, Skytree">Enterprise Purchase</label>
+                    <label><input type="radio" name="optradio4" ng-model="opt4" value="Informatica,Talend,Skytree">Enterprise Purchase</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 5: Do you need to transform your data?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio5" ng-model="opt5" value="Pentaho, Informatica, Talend, Sqoop, Flume">Yes</label>
+                    <label><input type="radio" name="optradio5" ng-model="opt5" value="Pentaho,Informatica,Talend,Sqoop,Flume">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio5" ng-model="opt5" value="">No</label>
