--- a/clientSurvey/views/survey/section2.view.html
+++ b/clientSurvey/views/survey/section2.view.html
@@ -6,7 +6,7 @@
             </section>
             <h2 align="left">Question 6: Do you want a UI for data visualisation?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio6" ng-model="opt6" value="Pentaho, Informatica, Talend, Skytree, NiFi">Yes</label>
+                    <label><input type="radio" name="optradio6" ng-model="opt6" value="Pentaho,Informatica,Talend,SkyTree,NiFi">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio6" ng-model="opt6" value="">No</label>
@@ -15,7 +15,7 @@
             <br>
             <h2 align="left">Question 7: Do you want a UI for data flow design?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio7" ng-model="opt7" value="Pentaho, Talend, SkyTree, Nifi">Yes</label>
+                    <label><input type="radio" name="optradio7" ng-model="opt7" value="Pentaho,Talend,SkyTree,NiFi">Yes</label>
                 </div>
                 <div class="radio">
                     <label><input type="radio" name="optradio7" ng-model="opt7" value="">No</label>
@@ -48,25 +48,25 @@
             <br>
             <h2 align="left">Question 10: What integrated services do you require?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Pentaho, Informatica, Talend">Data Integration</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Pentaho,Informatica,Talend">Data Integration</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Pentaho, Informatica">Embedded Analytics</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Pentaho,Informatica">Embedded Analytics</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Pentaho, Talend">IoT Analytics</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Pentaho,Talend">IoT Analytics</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Talend, Informatica">Big Data Management/Governance</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Talend,Informatica">Big Data Management/Governance</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Talend, Skytree, Informatica">Machine Learning</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Talend,SkyTree,Informatica">Machine Learning</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Distributed Data Coordination">Distributed Data Coordination</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="">Distributed Data Coordination</label>
                 </div>
             </h2>
-            <button align="right" class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="OnAssessmentSubmit()" data-wow-delay=".3s">Show Analysis</button>
+            <button align="right" class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="OnNextSubmit()" data-wow-delay=".3s">Show Analysis</button>
 
         </div>
     </div>
