Changed the message when the project is not a big data project

--- a/clientSurvey/views/survey/qualifier.view.html
+++ b/clientSurvey/views/survey/qualifier.view.html
@@ -9,7 +9,7 @@
                     <label><input type="radio" name="optradio1" ng-model="opt1" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" checked="checked" name="optradio1" ng-model="opt1" value="false">No</label>
+                    <label><input type="radio" name="optradio1" ng-model="opt1" value="false">No</label>
                 </div>
             </h2>
             <br>
@@ -18,7 +18,7 @@
                     <label><input type="radio" name="optradio2" ng-model="opt2" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio2" ng-model="opt2" value="false" checked >No</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="false">No</label>
                 </div>
             </h2>
             <br>
@@ -27,7 +27,7 @@
                     <label><input type="radio" name="optradio3" ng-model="opt3" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio3" ng-model="opt3" value="true" checked >No</label>
+                    <label><input type="radio" name="optradio3" ng-model="opt3" value="false">No</label>
                 </div>
             </h2>
             <br>
@@ -36,7 +36,7 @@
                     <label><input type="radio" name="optradio4" ng-model="opt4" value="true">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio4" ng-model="opt4" value="false" checked >No</label>
+                    <label><input type="radio" name="optradio4" ng-model="opt4" value="false">No</label>
                 </div>
             </h2>
             <br>
