--- a/clientSurvey/views/survey/section1.view.html
+++ b/clientSurvey/views/survey/section1.view.html
@@ -33,7 +33,7 @@
                     <label><input type="radio" name="optradio2" ng-model="opt2" value="Pentaho,Talend,Sqoop,Zookeeper,Flume,NiFi">Unix</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio2" ng-model="opt2" value="">Any</label>
+                    <label><input type="radio" name="optradio2" ng-model="opt2" value="None">Any</label>
                 </div>
             </h2>
             <br>
@@ -42,7 +42,7 @@
                     <label><input type="radio" name="optradio3" ng-model="opt3" value="Pentaho,Informatica,Talend,SkyTree">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio3" ng-model="opt3" value="">No</label>
+                    <label><input type="radio" name="optradio3" ng-model="opt3" value="None">No</label>
                 </div>
             </h2>
             <br>
@@ -60,7 +60,7 @@
                     <label><input type="radio" name="optradio5" ng-model="opt5" value="Pentaho,Informatica,Talend,Sqoop,Flume">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio5" ng-model="opt5" value="">No</label>
+                    <label><input type="radio" name="optradio5" ng-model="opt5" value="None">No</label>
                 </div>
             </h2>
             <button align="right" class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="OnNextSubmit()" data-wow-delay=".3s">Next >></button>
