--- a/clientSurvey/views/survey/section2.view.html
+++ b/clientSurvey/views/survey/section2.view.html
@@ -9,7 +9,7 @@
                     <label><input type="radio" name="optradio6" ng-model="opt6" value="Pentaho,Informatica,Talend,SkyTree,NiFi">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio6" ng-model="opt6" value="">No</label>
+                    <label><input type="radio" name="optradio6" ng-model="opt6" value="None">No</label>
                 </div>
             </h2>
             <br>
@@ -18,31 +18,31 @@
                     <label><input type="radio" name="optradio7" ng-model="opt7" value="Pentaho,Talend,SkyTree,NiFi">Yes</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio7" ng-model="opt7" value="">No</label>
+                    <label><input type="radio" name="optradio7" ng-model="opt7" value="None">No</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 8: How do you categorize your organization programming skills?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio8" ng-model="opt8" value="">High</label>
+                    <label><input type="radio" name="optradio8" ng-model="opt8" value="Pentaho,Informatica,Talend,SkyTree,Sqoop,Zookeeper,NiFi,Flume">High</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio8" ng-model="opt8" value="">Medium</label>
+                    <label><input type="radio" name="optradio8" ng-model="opt8" value="Pentaho,Informatica,Talend,SkyTree,NiFi">Medium</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio8" ng-model="opt8" value="">Low</label>
+                    <label><input type="radio" name="optradio8" ng-model="opt8" value="Pentaho,Informatica,SkyTree">Low</label>
                 </div>
             </h2>
             <br>
             <h2 align="left">Question 9: How would you describe the size of your technical recourses?
                 <div class="radio" >
-                    <label><input type="radio" name="optradio9" ng-model="opt9" value="">Small (1-20)</label>
+                    <label><input type="radio" name="optradio9" ng-model="opt9" value="Pentaho,Informatica,SkyTree">Small (1-20)</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio9" ng-model="opt9" value="">Medium (20-50)</label>
+                    <label><input type="radio" name="optradio9" ng-model="opt9" value="Pentaho,Informatica,Talend,SkyTree,NiFi">Medium (20-50)</label>
                 </div>
                 <div class="radio">
-                    <label><input type="radio" name="optradio9" ng-model="opt9" value="">Large (50-150+)</label>
+                    <label><input type="radio" name="optradio9" ng-model="opt9" value="Pentaho,Informatica,Talend,SkyTree,Sqoop,Zookeeper,NiFi,Flume">Large (50-150+)</label>
                 </div>
             </h2>
             <br>
