Misc Updates - Pass 4 - 14 April

--- a/clientSurvey/views/survey/section2.view.html
+++ b/clientSurvey/views/survey/section2.view.html
@@ -63,7 +63,7 @@
                     <label><input type="radio" name="optradio10" ng-model="opt10" value="Talend,SkyTree,Informatica">Machine Learning</label>
                 </div>
                 <div class="radio" >
-                    <label><input type="radio" name="optradio10" ng-model="opt10" value="">Distributed Data Coordination</label>
+                    <label><input type="radio" name="optradio10" ng-model="opt10" value="Sqoop,Zookeeper,Flume,NiFi">Distributed Data Coordination</label>
                 </div>
             </h2>
             <button align="right" class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="OnNextSubmit()" data-wow-delay=".3s">Show Analysis</button>
