Misc Updates - Pass 1 - 15 April

--- a/clientSurvey/views/survey/startSurvey.view.html
+++ b/clientSurvey/views/survey/startSurvey.view.html
@@ -5,7 +5,7 @@
                 <h1>Analysis Report</h1>
                 <h2>{{result}}</h2>
             </section>
-            <button ng-show={{needCloud}} class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="start()" data-wow-delay=".3s" data-section="#works" >Analyze Cloud Infrastructure</button>
+            <button ng-show={{needCloud}} class="btn-lines dark light wow fadeInUp animated smooth-scroll btn btn-default btn-green" ng-click="start()" data-wow-delay=".3s" data-section="#works" > We want to know about your company further</button>
 
         </div>
     </div>
